--- a/translations/soul.en.xlf
+++ b/translations/soul.en.xlf
@@ -2617,5 +2617,32 @@
         <target>Ende der Beschränkung: %date%</target>
       </segment>
     </unit>
+    <unit id="_33rQU1" name="Durch deinen Weggang hast du deine Koalition soeben aufgelöst.">
+      <notes>
+        <note category="german">Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</note>
+      </notes>
+      <segment>
+        <source>Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</source>
+        <target>Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</target>
+      </segment>
+    </unit>
+    <unit id="pxDv8GV" name="Möchtest du diese Koalition verlassen und somit auflösen?">
+      <notes>
+        <note category="german">Möchtest du diese Koalition verlassen und somit auflösen?</note>
+      </notes>
+      <segment>
+        <source>Möchtest du diese Koalition verlassen und somit auflösen?</source>
+        <target>Möchtest du diese Koalition verlassen und somit auflösen?</target>
+      </segment>
+    </unit>
+    <unit id="TDZXLoY" name="Möchtest du diese Koalition verlassen?">
+      <notes>
+        <note category="german">Möchtest du diese Koalition verlassen?</note>
+      </notes>
+      <segment>
+        <source>Möchtest du diese Koalition verlassen?</source>
+        <target>Möchtest du diese Koalition verlassen?</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
