--- a/translations/ghost.de.xlf
+++ b/translations/ghost.de.xlf
@@ -1225,5 +1225,14 @@
         <target>Raben-Optionen</target>
       </segment>
     </unit>
+    <unit id="jRT25y3" name="Events">
+      <notes>
+        <note category="german">Events</note>
+      </notes>
+      <segment>
+        <source>Events</source>
+        <target>Events</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
