--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -2608,5 +2608,32 @@
         <target>Ende der Beschränkung: %date%</target>
       </segment>
     </unit>
+    <unit id="_33rQU1" name="Durch deinen Weggang hast du deine Koalition soeben aufgelöst.">
+      <notes>
+        <note category="german">Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</note>
+      </notes>
+      <segment>
+        <source>Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</source>
+        <target>Acabas de disolver tu alianza al salir de ella.</target>
+      </segment>
+    </unit>
+    <unit id="pxDv8GV" name="Möchtest du diese Koalition verlassen und somit auflösen?">
+      <notes>
+        <note category="german">Möchtest du diese Koalition verlassen und somit auflösen?</note>
+      </notes>
+      <segment>
+        <source>Möchtest du diese Koalition verlassen und somit auflösen?</source>
+        <target>¿Confirmas abandonar y disolver esta alianza?</target>
+      </segment>
+    </unit>
+    <unit id="TDZXLoY" name="Möchtest du diese Koalition verlassen?">
+      <notes>
+        <note category="german">Möchtest du diese Koalition verlassen?</note>
+      </notes>
+      <segment>
+        <source>Möchtest du diese Koalition verlassen?</source>
+        <target>¿Confirmas abandonar esta alianza?</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
