--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -17948,7 +17948,7 @@
       </notes>
       <segment>
         <source>Du wachst heute Morgen mit einer schrecklichen Migräne auf und hast Schwierigkeiten, zu sehen... Du beschließt, aus deinem Zelt zu gehen. Die Nachbarn an denen du vorbeiläufst, neigen ihr Haupt vor dir.</source>
-        <target>Vous vous réveillez ce matin avec une horrible migraine et vous avez des difficultés à voir... Vous décidez de sortir de votre tente. Les voisons que vous croisez vous font la révérence.</target>
+        <target>Vous vous réveillez ce matin avec une horrible migraine et vous avez des difficultés à voir... Vous décidez de sortir de votre tente. Les voisins que vous croisez vous font la révérence.</target>
       </segment>
     </unit>
     <unit id="c2baI8U" name="27aac18">
@@ -17957,7 +17957,7 @@
       </notes>
       <segment>
         <source>Was ist letzte Nacht nur passiert? Du hast wohl zu heftig gefeiert. Als du die Stadtmauer erreichst, kannst du ein kleines blaues Leuchten sehen... Ja, ja, du bist in der Tat der Ausgewählte. Der Zweifel verschwindet, als du dir die Hand an den Kopf hälst: eine lächerliche Maske klebt an deinem Gesicht und reduziert dein Sehvermögen erheblich.</source>
-        <target>Que s'est-t'il passé hier soit ? Vous avez trop fait la fête. Arrivé aux remparts vous distinguez de petites lueurs bleues... Oui oui, c'est vous qui avez été désigné. Le doute disparaît lorsque vous portez la main à votre tête : un masque ridicule vous colle au visage et réduit considérablement votre vue.</target>
+        <target>Que s'est-t'il passé hier soir ? Vous avez trop fait la fête. Arrivé aux remparts vous distinguez de petites lueurs bleues... Oui oui, c'est vous qui avez été désigné. Le doute disparaît lorsque vous portez la main à votre tête : un masque ridicule vous colle au visage et réduit considérablement votre vue.</target>
       </segment>
     </unit>
     <unit id="x09E3UL" name="Du bist nun der Schamane.">
@@ -17975,7 +17975,7 @@
       </notes>
       <segment>
         <source>Ein neuer Horizont öffnet sich für dich: Du bist nicht länger ein gewöhnlicher Bürger, sondern ein geistiger Führer!</source>
-        <target>Un nouvel horizon s'offre à vous : Vous n'êtres plus un citoyen ordinaire, mais un guide spirituel !</target>
+        <target>Un nouvel horizon s'offre à vous : vous n'êtres plus un citoyen ordinaire, mais un guide spirituel !</target>
       </segment>
     </unit>
     <unit id="DGMBZZJ" name="Mit deinen %mp% kannst du:">
@@ -18047,7 +18047,7 @@
       </notes>
       <segment>
         <source>Es enthält alle wesentlichen Informationen, um endlich deinen überlegenen Status in den Augen aller anerkennen zu lassen...</source>
-        <target>Il contient toutes les informations essentielles pour faire enfin reconnaître, aux yeux de tous la supériorité de votre statut...</target>
+        <target>Il contient toutes les informations essentielles pour faire enfin reconnaître aux yeux de tous la supériorité de votre statut...</target>
       </segment>
     </unit>
     <unit id="bhwk0Sz" name="63b8c04">
