--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -2728,5 +2728,167 @@
         <target>Black Board</target>
       </segment>
     </unit>
+    <unit id="rDIuKb4" name="Stadt füllen">
+      <notes>
+        <note category="german">Stadt füllen</note>
+      </notes>
+      <segment>
+        <source>Stadt füllen</source>
+        <target>Fill town</target>
+      </segment>
+    </unit>
+    <unit id="I6NYwV3" name="Bank füllen">
+      <notes>
+        <note category="german">Bank füllen</note>
+      </notes>
+      <segment>
+        <source>Bank füllen</source>
+        <target>Fill bank</target>
+      </segment>
+    </unit>
+    <unit id="NECchbh" name="Banksperre aufheben">
+      <notes>
+        <note category="german">Banksperre aufheben</note>
+      </notes>
+      <segment>
+        <source>Banksperre aufheben</source>
+        <target>Remove bank locks</target>
+      </segment>
+    </unit>
+    <unit id="HBKEVAD" name="Durst aufheben">
+      <notes>
+        <note category="german">Durst aufheben</note>
+      </notes>
+      <segment>
+        <source>Durst aufheben</source>
+        <target>Remove thirst</target>
+      </segment>
+    </unit>
+    <unit id="9hzLkBp" name="Alle Spieler entkoppeln">
+      <notes>
+        <note category="german">Alle Spieler entkoppeln</note>
+      </notes>
+      <segment>
+        <source>Alle Spieler entkoppeln</source>
+        <target>Disengage all players</target>
+      </segment>
+    </unit>
+    <unit id="t5vj7sC" name="Alle Spieler koppeln">
+      <notes>
+        <note category="german">Alle Spieler koppeln</note>
+      </notes>
+      <segment>
+        <source>Alle Spieler koppeln</source>
+        <target>Engage all players</target>
+      </segment>
+    </unit>
+    <unit id="qKBuSla" name="Zone">
+      <notes>
+        <note category="german">Zone</note>
+      </notes>
+      <segment>
+        <source>Zone</source>
+        <target>Zone</target>
+      </segment>
+    </unit>
+    <unit id="QzMRMH1" name="Leere Zone">
+      <notes>
+        <note category="german">Leere Zone</note>
+      </notes>
+      <segment>
+        <source>Leere Zone</source>
+        <target>Empty Zone</target>
+      </segment>
+    </unit>
+    <unit id="dgw_NYB" name="Entkoppelte Leben">
+      <notes>
+        <note category="german">Entkoppelte Leben</note>
+      </notes>
+      <segment>
+        <source>Entkoppelte Leben</source>
+        <target>Disengaged Citizens</target>
+      </segment>
+    </unit>
+    <unit id="TLxPMB8" name="Entkoppeln">
+      <notes>
+        <note category="german">Entkoppeln</note>
+      </notes>
+      <segment>
+        <source>Entkoppeln</source>
+        <target>Disengange</target>
+      </segment>
+    </unit>
+    <unit id="hn7LsRJ" name="Punkte">
+      <notes>
+        <note category="german">Punkte</note>
+      </notes>
+      <segment>
+        <source>Punkte</source>
+        <target>Points</target>
+      </segment>
+    </unit>
+    <unit id="dPobLXQ" name="Rollen">
+      <notes>
+        <note category="german">Rollen</note>
+      </notes>
+      <segment>
+        <source>Rollen</source>
+        <target>Roles</target>
+      </segment>
+    </unit>
+    <unit id="LsFE_gX" name="Versteckter Status">
+      <notes>
+        <note category="german">Versteckter Status</note>
+      </notes>
+      <segment>
+        <source>Versteckter Status</source>
+        <target>Hidden Status</target>
+      </segment>
+    </unit>
+    <unit id="bauA9lx" name="Versteckt:">
+      <notes>
+        <note category="german">Versteckt:</note>
+      </notes>
+      <segment>
+        <source>Versteckt:</source>
+        <target>Hidden:</target>
+      </segment>
+    </unit>
+    <unit id="Fe136ia" name="Kein Bürger ausgewählt!">
+      <notes>
+        <note category="german">Kein Bürger ausgewählt!</note>
+      </notes>
+      <segment>
+        <source>Kein Bürger ausgewählt!</source>
+        <target>No citizen selected!</target>
+      </segment>
+    </unit>
+    <unit id="NrcXgR7" name="BP">
+      <notes>
+        <note category="german">BP</note>
+      </notes>
+      <segment>
+        <source>BP</source>
+        <target>CP</target>
+      </segment>
+    </unit>
+    <unit id="IErGaoh" name="MP">
+      <notes>
+        <note category="german">MP</note>
+      </notes>
+      <segment>
+        <source>MP</source>
+        <target>MP</target>
+      </segment>
+    </unit>
+    <unit id="tVQnz.X" name="Einen Beruf auswählen:">
+      <notes>
+        <note category="german">Einen Beruf auswählen:</note>
+      </notes>
+      <segment>
+        <source>Einen Beruf auswählen:</source>
+        <target>Choose Profession:</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
