--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -2752,7 +2752,169 @@
       </notes>
       <segment>
         <source>Schwarzes Brett</source>
-        <target>Schwarzes Brett</target>
+        <target>Tableau noir</target>
+      </segment>
+    </unit>
+    <unit id="rDIuKb4" name="Stadt füllen">
+      <notes>
+        <note category="german">Stadt füllen</note>
+      </notes>
+      <segment>
+        <source>Stadt füllen</source>
+        <target>Remplir la ville de citoyens</target>
+      </segment>
+    </unit>
+    <unit id="I6NYwV3" name="Bank füllen">
+      <notes>
+        <note category="german">Bank füllen</note>
+      </notes>
+      <segment>
+        <source>Bank füllen</source>
+        <target>Remplir la banque</target>
+      </segment>
+    </unit>
+    <unit id="NECchbh" name="Banksperre aufheben">
+      <notes>
+        <note category="german">Banksperre aufheben</note>
+      </notes>
+      <segment>
+        <source>Banksperre aufheben</source>
+        <target>Retirer l'anti-abus de la banque</target>
+      </segment>
+    </unit>
+    <unit id="HBKEVAD" name="Durst aufheben">
+      <notes>
+        <note category="german">Durst aufheben</note>
+      </notes>
+      <segment>
+        <source>Durst aufheben</source>
+        <target>Retirer la soif de tous les joueurs</target>
+      </segment>
+    </unit>
+    <unit id="9hzLkBp" name="Alle Spieler entkoppeln">
+      <notes>
+        <note category="german">Alle Spieler entkoppeln</note>
+      </notes>
+      <segment>
+        <source>Alle Spieler entkoppeln</source>
+        <target>Désengager tous les joueurs</target>
+      </segment>
+    </unit>
+    <unit id="t5vj7sC" name="Alle Spieler koppeln">
+      <notes>
+        <note category="german">Alle Spieler koppeln</note>
+      </notes>
+      <segment>
+        <source>Alle Spieler koppeln</source>
+        <target>Engager tous les joueurs</target>
+      </segment>
+    </unit>
+    <unit id="qKBuSla" name="Zone">
+      <notes>
+        <note category="german">Zone</note>
+      </notes>
+      <segment>
+        <source>Zone</source>
+        <target>Zone</target>
+      </segment>
+    </unit>
+    <unit id="QzMRMH1" name="Leere Zone">
+      <notes>
+        <note category="german">Leere Zone</note>
+      </notes>
+      <segment>
+        <source>Leere Zone</source>
+        <target>Zone vide</target>
+      </segment>
+    </unit>
+    <unit id="dgw_NYB" name="Entkoppelte Leben">
+      <notes>
+        <note category="german">Entkoppelte Leben</note>
+      </notes>
+      <segment>
+        <source>Entkoppelte Leben</source>
+        <target>Citoyens désengagés</target>
+      </segment>
+    </unit>
+    <unit id="TLxPMB8" name="Entkoppeln">
+      <notes>
+        <note category="german">Entkoppeln</note>
+      </notes>
+      <segment>
+        <source>Entkoppeln</source>
+        <target>Désengager</target>
+      </segment>
+    </unit>
+    <unit id="hn7LsRJ" name="Punkte">
+      <notes>
+        <note category="german">Punkte</note>
+      </notes>
+      <segment>
+        <source>Punkte</source>
+        <target>Points</target>
+      </segment>
+    </unit>
+    <unit id="dPobLXQ" name="Rollen">
+      <notes>
+        <note category="german">Rollen</note>
+      </notes>
+      <segment>
+        <source>Rollen</source>
+        <target>Rôles</target>
+      </segment>
+    </unit>
+    <unit id="LsFE_gX" name="Versteckter Status">
+      <notes>
+        <note category="german">Versteckter Status</note>
+      </notes>
+      <segment>
+        <source>Versteckter Status</source>
+        <target>Statut caché</target>
+      </segment>
+    </unit>
+    <unit id="bauA9lx" name="Versteckt:">
+      <notes>
+        <note category="german">Versteckt:</note>
+      </notes>
+      <segment>
+        <source>Versteckt:</source>
+        <target>Caché:</target>
+      </segment>
+    </unit>
+    <unit id="Fe136ia" name="Kein Bürger ausgewählt!">
+      <notes>
+        <note category="german">Kein Bürger ausgewählt!</note>
+      </notes>
+      <segment>
+        <source>Kein Bürger ausgewählt!</source>
+        <target>Aucun citoyen sélectionné !</target>
+      </segment>
+    </unit>
+    <unit id="NrcXgR7" name="BP">
+      <notes>
+        <note category="german">BP</note>
+      </notes>
+      <segment>
+        <source>BP</source>
+        <target>PC</target>
+      </segment>
+    </unit>
+    <unit id="IErGaoh" name="MP">
+      <notes>
+        <note category="german">MP</note>
+      </notes>
+      <segment>
+        <source>MP</source>
+        <target>PM</target>
+      </segment>
+    </unit>
+    <unit id="tVQnz.X" name="Einen Beruf auswählen:">
+      <notes>
+        <note category="german">Einen Beruf auswählen:</note>
+      </notes>
+      <segment>
+        <source>Einen Beruf auswählen:</source>
+        <target>Choisir un métier</target>
       </segment>
     </unit>
   </file>
