--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -2914,7 +2914,7 @@
       </notes>
       <segment>
         <source>Einen Beruf auswählen:</source>
-        <target>Choisir un métier</target>
+        <target>Choisir un métier:</target>
       </segment>
     </unit>
   </file>
