--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -2917,5 +2917,14 @@
         <target>Choisir un métier:</target>
       </segment>
     </unit>
+    <unit id="_Kc4j.e" name="Stadt anlegen">
+      <notes>
+        <note category="german">Stadt anlegen</note>
+      </notes>
+      <segment>
+        <source>Stadt anlegen</source>
+        <target>Créer une ville</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
